[package]
name = "sendme-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base-x = "0.2.11"
clap = { version = "4.5.29", features = ["derive"] }
if-addrs = "0.13.3"
iroh = "0.32.1"
iroh-blobs = { version = "0.32.0", features = ["rpc"] }
swarm-discovery = "0.2.1"
tokio = "1.43.0"
