[package]
name = "authentication-k256"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.4"
rand = "0.9.0"
rand_core = "0.6.4"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
